<package>
  <name>dds_ros1_communication</name>
  <version>1.0.0</version>
  <description>
    This package provides tests for dds and ros1
  </description>
  <maintainer email="generic_author@gmail.com">Generic author</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
